--- a/index.html
+++ b/index.html
@@ -734,9 +734,9 @@
       <!------------------------------------------------Projects---------------------------------------------------------------------------------------->
       <section class="ProjectsSection" id="ProjectsSection">
         <h3 class="subTitle row-2 bounce">My Projects</h3>
-        <div class="project-item">
+        <div class="project-item" id="TheAtlasSix">
           <div class="project-icon">
-            <img src="Images/Icons/projectX.svg" alt="Project X Icon" />
+            <img src="Images/Icons/theAtlasSix.svg" alt="The Atlas Six Icon" />
           </div>
           <div class="project-details">
             <h2>The Atlas Six</h2>
@@ -775,16 +775,16 @@
           </div>
         </div>
 
-        <div class="project-item">
+        <div class="project-item" id="Passion">
           <div class="project-icon">
             <img src="Images/Icons/ai.svg" alt="Project 2 Icon" />
           </div>
           <div class="project-details">
             <h2>Passion</h2>
             <p>
-              Passion is my AI-powered, node-based interactive chatbot designed
-              to provide seamless, intelligent communication, relaying
-              information about me in a more fun but effective way.
+              Passion is my node-based chatbot driven by the GPT-4 mini model
+              designed to provide seamless and intelligent communication,
+              relaying information about me in a more fun but effective way.
             </p>
             <p>
               <strong>Version:</strong>
@@ -814,7 +814,7 @@
           </div>
         </div>
 
-        <div class="project-item">
+        <div class="project-item" id="CreateIT">
           <div class="project-icon">
             <img src="Images/Icons/createIT.svg" alt="Project 2 Icon" />
           </div>
@@ -850,7 +850,7 @@
           </div>
         </div>
 
-        <div class="project-item">
+        <div class="project-item" id="TaskApp">
           <div class="project-icon">
             <img src="Images/Icons/checklist.svg" alt="Project 3 Icon" />
           </div>
@@ -921,62 +921,75 @@
       <section class="Socials" id="SocialsSection">
         <h3 class="subTitle bounce">My Socials</h3>
         <div class="social-posts-container">
-          <div class="social-post">
-            <div class="social-post-header">
+          <a
+            href="https://www.linkedin.com/posts/tinotenda-mhedziso_studentdevelopers-nmustudents-nmucomputersociety-activity-7233195999819649024-cC6M?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEWDhyYB0fsz2ir802fc1jcJgodtwAgEVmE" target="_blank">
+            <div class="social-post">
+              <div class="social-post-header">
+                <img
+                  src="Images/Me.webp"
+                  alt="Profile Picture"
+                  class="social-profile-pic" />
+                <h2>Version Control Class</h2>
+                <img
+                  src="Images/Icons/linkedin.svg"
+                  alt="LinkedIn Icon"
+                  class="social-platform-icon" />
+              </div>
+              <p class="social-post-preview">
+                Finally... I got the opportunity to bring more people into
+                open-source projects through Git and GitHub😌. Something that
+                seems daunting at first but...
+              </p>
               <img
-                src="Images/Me.webp"
-                alt="Profile Picture"
-                class="social-profile-pic" />
-              <h2>Version Control Class</h2>
-              <span class="social-platform-icon">🖤</span>
+                src="Images/Posts/VCclass.webp"
+                alt="Post Preview"
+                class="social-post-image" />
             </div>
-            <p class="social-post-preview">
-              Finally... I got the opportunity to bring more people into
-              open-source projects through Git and GitHub😌. Something that
-              seems daunting at first but...
-            </p>
-            <img
-              src="Images/Posts/VCclass.webp"
-              alt="Post Preview"
-              class="social-post-image" />
-          </div>
+          </a>
+          <a
+            href="https://dev.to/passionoverpain/debugging-adventure-day-1-what-to-do-when-your-code-doesnt-work-2ji2" target="_blank">
+            <div class="social-post">
+              <div class="social-post-header">
+                <img
+                  src="Images/Me.webp"
+                  alt="Profile Picture"
+                  class="social-profile-pic" />
+                <h2>Debugging Adventure</h2>
 
-          <div class="social-post">
-            <div class="social-post-header">
+                <img
+                  src="Images/Icons/dev.svg"
+                  alt="Dev.to Icon"
+                  class="social-platform-icon" />
+              </div>
+              <p class="social-post-preview">
+                During your coding quest, you encounter a formidable enemy—an
+                unexpected bug in your project that brings everything to a
+                halt...
+              </p>
               <img
-                src="Images/Me.webp"
-                alt="Profile Picture"
-                class="social-profile-pic" />
-              <h2>Debugging Adventure</h2>
-              <span class="social-platform-icon">
-                <img src="Images/linkedin.svg" alt="LinkedIn Image" />
-              </span>
+                src="Images/Posts/Debugging Adventure.webp"
+                alt="Post Preview"
+                class="social-post-image" />
             </div>
-            <p class="social-post-preview">
-              During your coding quest, you encounter a formidable enemy—an
-              unexpected bug in your project that brings everything to a halt.
-              What do you do...
-            </p>
-            <img
-              src="Images/Posts/Debugging Adventure.webp"
-              alt="Post Preview"
-              class="social-post-image" />
-          </div>
+          </a>
 
+          <a href="https://dev.to/passionoverpain/unlocking-the-secret-gem-inside-a-centered-div-4d9j" target="_blank">
           <div class="social-post">
             <div class="social-post-header">
               <img
                 src="Images/Me.webp"
                 alt="Profile Picture"
                 class="social-profile-pic" />
-              <h2>Centered Div: CSS Styles</h2>
-              <span class="social-platform-icon">🐦</span>
+              <h2>CSS Styles</h2>
+              <img
+                src="Images/Icons/dev.svg"
+                alt="Dev.to Icon"
+                class="social-platform-icon" />
             </div>
             <p class="social-post-preview">
               If you’re just starting out on your web development journey,
               you’ve probably realized how frustrating CSS can be when you don’t
-              fully understand what you’re doing. Cascading Style Sheets (CSS)
-              is crucial for styling a web page, but...
+              fully understand...
             </p>
             <img
               src="Images/Posts/CSS Styling.webp"
@@ -984,7 +997,7 @@
               class="social-post-image" />
           </div>
         </div>
-
+      </a>
         <ul class="socialIconsCon">
           <li class="social-Icon">
             <a href="">
@@ -1034,27 +1047,39 @@
             </ul>
           </div>
           <div class="footer-column">
-            <h4>Follow Me</h4>
-            <ul class="social-icons">
+            <h4>Selected Projects</h4>
+            <ul class="footer-projects">
               <li>
-                <a onclick="openDevTo()">
-                  <ion-icon name="reader-sharp"></ion-icon>
+                <a href="#TheAtlasSix">
+                  <img
+                    src="Images/Icons/theAtlasSix.svg"
+                    alt="The Atlas Six Icon" />
                 </a>
+                <p class="project-name">The Atlas Six</p>
               </li>
               <li>
-                <a onclick="openEmail()">
-                  <ion-icon name="mail-sharp"></ion-icon>
+                <a href="#Passion">
+                  <img
+                    src="Images/Icons/ai.svg"
+                    alt="Passion footer project icon" />
                 </a>
+                <p class="project-name">Passion</p>
               </li>
               <li>
-                <a onclick="openGitHub()">
-                  <ion-icon name="logo-github"></ion-icon>
+                <a href="#CreateIT">
+                  <img
+                    src="Images/Icons/createIT.svg"
+                    alt="CreateIT footer project Icon" />
                 </a>
+                <p class="project-name">CreateIT</p>
               </li>
               <li>
-                <a onclick="openLinkedIn()">
-                  <ion-icon name="logo-linkedin"></ion-icon>
+                <a href="#TaskApp">
+                  <img
+                    src="Images/Icons/checklist.svg"
+                    alt="Project Management App Icon" />
                 </a>
+                <p class="project-name">Task App</p>
               </li>
             </ul>
           </div>
