Added Speak SVG

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="card__propic" />
             <h2 class="card__title" id="cardTitle">Site Navigation</h2>
             <div id="cardIntro">
-              <img src="Images/Icons/help.svg" />
+              <img src="Images/Icons/help.svg" id="cardImage" />
               <p id="cardDescription"></p>
             </div>
             <table class="sitemap-table" id="cardTable">
