--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               class="card__propic" />
             <h2 class="card__title" id="cardTitle">Site Navigation</h2>
             <div id="cardIntro">
-              <img src="Images/Icons/help.svg" id="cardImage" />
+              <img src="" id="cardImage" />
               <p id="cardDescription"></p>
             </div>
             <table class="sitemap-table" id="cardTable">
@@ -933,15 +933,25 @@
         <h2 class="section-title subTitle bounce">My Skills</h2>
         <div class="skills-container">
           <div class="skill-card row-1 bounce">
-            <ion-icon name="cloud-download-outline" class="icon"></ion-icon>
+            <img
+              src="Images/Icons/database.svg"
+              alt="This is a computer device"
+              class="skill-icon" />
             <h3>Database Development</h3>
           </div>
           <div class="skill-card row-2 bounce">
-            <ion-icon name="desktop-outline" class="icon"></ion-icon>
+            <img
+              src="Images/Icons/computer.svg"
+              alt="This is a computer device"
+              class="skill-icon" />
+
             <h3>Desktop Applications Development</h3>
           </div>
           <div class="skill-card row-1 bounce">
-            <ion-icon name="logo-chrome" class="icon"></ion-icon>
+            <img
+              src="Images/Icons/website.svg"
+              alt="This is a computer device"
+              class="skill-icon" />
             <h3>Web Applications Development</h3>
           </div>
         </div>
