--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
               <li>
                 <a href="#Passion">
                   <img
-                    src="Images/Icons/ai.svg"
+                    src="Images/Icons/her.svg"
                     alt="Passion footer project icon" />
                 </a>
                 <p class="project-name">Passion</p>
