Added some simple GSAP animations

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" />
     <!-- Notyf JS -->
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+    <!-- GSAP CDN link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
 
     <title>Tinotenda Mhedziso's portfolio website</title>
   </head>
@@ -750,8 +753,10 @@
         </div>
       </section>
       <!------------------------------------------------Projects---------------------------------------------------------------------------------------->
-      <section class="ProjectsSection" id="ProjectsSection">
-        <h2 class="section-title subTitle bounce">My Projects</h2>
+      <section class="Projects" id="ProjectsSection">
+        <div class="flexBox">
+          <h2 class="section-title subTitle bounce">My Projects</h2>
+        </div>
         <div class="project-item" id="TheAtlasSix">
           <div class="project-icon">
             <img src="Images/Icons/theAtlasSix.svg" alt="The Atlas Six Icon" />
@@ -936,7 +941,9 @@
 
       <!-------------------------------------------Skills--------------------------------------------------------------------------------------------->
       <section class="Skills" id="SkillsSection">
-        <h2 class="section-title subTitle bounce">My Skills</h2>
+        <div class="flexBox">
+          <h2 class="section-title subTitle bounce">My Skills</h2>
+        </div>
         <div class="skills-container">
           <div class="skill-card row-1 bounce">
             <img
@@ -964,7 +971,9 @@
       </section>
       <!------------------------------------------------My Socials---------------------------------------------------------------------------------------->
       <section class="Socials" id="SocialsSection">
-        <h3 class="subTitle bounce section-title">My Socials</h3>
+        <div class="flexBox">
+          <h3 class="subTitle bounce section-title">My Socials</h3>
+        </div>
         <div class="social-posts-container">
           <a
             href="https://www.linkedin.com/posts/tinotenda-mhedziso_studentdevelopers-nmustudents-nmucomputersociety-activity-7233195999819649024-cC6M?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEWDhyYB0fsz2ir802fc1jcJgodtwAgEVmE"
