Added some more music

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       </div>
       <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Terms of Service<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
       <div id="Me">
-        <h3>Hey,</h3>
+        <h3 onclick="resetQuestStatuses()">Hey,</h3>
         <h1 class="myName">
           I'm
           <span
@@ -1232,7 +1232,9 @@
                 </body>
               </html>'></iframe>
           </div>
-          <audio id="myMusic" src="Audio/Music/Goblin.mp3"></audio>
+          <audio
+            id="myMusic"
+            src="Audio/Music/Shogun's Shadow Trap.mp3"></audio>
         </div>
       </div>
     </footer>
