Fixed CSS issue with other browsers

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       </div>
       <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Terms of Service<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< -->
       <div id="Me">
-        <h3 onclick="resetQuestStatuses()">Hey,</h3>
+        <h3>Hey,</h3>
         <h1 class="myName">
           I'm
           <span
