--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       name="keywords"
       content="Tinotenda Mhedziso, porfolio website, PassionOverPain" />
     <meta name="author" content="Tinotenda Mhedziso" />
+    <meta
+      name="google-site-verification"
+      content="d8Uve78HfX_Hn9B7z1HEcAUZTfJtPwbEPWyrcFXI_dI" />
     <link rel="shortcut icon" href="Images/Favicon.png" type="image/x-icon" />
     <!-- Notyf CSS -->
     <link
