Added extra caset for projects

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
       <!------------------------------------------------Projects---------------------------------------------------------------------------------------->
       <section class="Projects" id="ProjectsSection">
         <div class="flexBox">
-          <h2 class="section-title subTitle bounce">My Projects</h2>
+          <h2 class="section-title subTitle bounce"  onclick="showNotification(`These projects are ...`,3)" >My Projects</h2>
         </div>
         <div class="project-item" id="TheAtlasSix">
           <div class="project-icon">
