--- a/index.html
+++ b/index.html
@@ -735,10 +735,14 @@
                       [2023 ~ 2025]
                     </span>
                   </span>
+                  <br />
                 </li>
                 <ul>
-                  Bachelor's degree in Information Technology Academic
-                  Activites:
+                  <br />
+                  Bachelor's degree in Information Technology
+                  <br />
+                  <br />
+                  Academic Activites:
                   <li>Computer Society Executive</li>
                   <br />
                 </ul>
@@ -747,9 +751,21 @@
             <div class="View" id="Work">
               <ul>
                 <span style="color: #0f0">Society experience</span>
-                <li>Events Coordinator of the NMU Computer Society [2024]</li>
+                <br />
+                <li>
+                  <br />
+                  [March 2024 ~ December 2024]
+                  <br />
+                  Events Coordinator of the NMU Computer Society
+                </li>
+                <br />
                 <span style="color: #0f0">Working experience</span>
-                <li>Oasis Infobyte Junior Web Development Intern [2024]</li>
+                <li>
+                  <br />
+                  [June 2024 ~ July 2024]
+                  <br />
+                  Oasis Infobyte Junior Web Development Intern
+                </li>
                 <br />
               </ul>
             </div>
@@ -759,7 +775,11 @@
       <!------------------------------------------------Projects---------------------------------------------------------------------------------------->
       <section class="Projects" id="ProjectsSection">
         <div class="flexBox">
-          <h2 class="section-title subTitle bounce"  onclick="showNotification(`These projects are ...`,3)" >My Projects</h2>
+          <h2
+            class="section-title subTitle bounce"
+            onclick="showNotification(`These projects are ...`,3)">
+            My Projects
+          </h2>
         </div>
         <div class="project-item" id="TheAtlasSix">
           <div class="project-icon">
@@ -962,14 +982,14 @@
               alt="This is a computer device"
               class="skill-icon" />
 
-            <h3>Desktop Applications Development</h3>
+            <h3>Desktop Development</h3>
           </div>
           <div class="skill-card row-1 bounce">
             <img
               src="Images/Icons/website.svg"
               alt="This is a computer device"
               class="skill-icon" />
-            <h3>Web Applications Development</h3>
+            <h3>Web Development</h3>
           </div>
         </div>
       </section>
@@ -988,7 +1008,7 @@
                   src="Images/Me.webp"
                   alt="Profile Picture"
                   class="social-profile-pic" />
-                <h2>Version Control Class</h2>
+                <h2>Version Control</h2>
                 <img
                   src="Images/Icons/linkedin.svg"
                   alt="LinkedIn Icon"
@@ -1022,7 +1042,7 @@
                   class="social-platform-icon" />
               </div>
               <p class="social-post-preview">
-                During your coding quest, you encounter a formidable enemy—an
+                During your coding quest, you encounter a formidable enemy — an
                 unexpected bug in your project that brings everything to a
                 halt...
               </p>
