Hide some stuff

--- a/index.html
+++ b/index.html
@@ -807,11 +807,11 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span>Source Code</span>
+                <span>Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Live Site</span>
+                <span>Hidden</span>
               </button>
             </div>
           </div>
@@ -848,11 +848,11 @@
             </div>
             <div class="project-buttons">
               <button class="ui-btn">
-                <span>Source Code</span>
+                <span>Hidden</span>
               </button>
 
               <button class="ui-btn">
-                <span>Live Site</span>
+                <span>Hidden</span>
               </button>
             </div>
           </div>
